# brain-games

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  run-linter.yml
brain_games/: cli.py  typescript
brain_games/games/: calc.py  common.py  even.py  gcd.py  prime.py  progression.py  utils.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
