[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A set of simple brain games"
authors = ["Qwe <toughcough@gmail.com>"]
repository = "https://github.com/justpwned/python-project-lvl1"
packages = [
    { include = "brain_games" }
]
classifiers = [
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Puzzle Games",
]

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"